@@ -29,6 +29,9 @@
 
   * Add basic support for tags. (Jelmer Vernooij)
 
+  * Check for Mercurial repository before checking for Bazaar repository.
+    (Jelmer Vernooij, #674581, #688455)
+
  BUG FIXES
 
   * Mark as compatible with Bazaar 2.1, 2.2, 2.3 and 2.4. (Jelmer Vernooij)
